# thursday_5pm_2223

./: 01_переменные.cpp  CMakeLists.txt  file1.txt  file2.txt  main.cpp  myfile.txt
01_вычисления_2909/: 00_задачи.cpp
02_перечисления/: 00_перечисления.cpp
03_функции_0610/: 00_параметры_и_аргументы.cpp  01_условия_основы.cpp  02_вложенные_условия.cpp
04_условия_1310/: 00_разбор_дз.cpp  01_декартова_плоскость.cpp  02_задачи.cpp
05_массивы_и_циклы_2010/: 00_дз.cpp  01_массивы_теория.cpp  02_цикл_for_теория.cpp  03_циклы_массивы.cpp
06_массивы_2710/: 00_дз.cpp  01_рандомные_числа.cpp
07_массивы2_0311/: 00_hw.cpp  01_линейный_поиск.cpp  02_task_lab_2.cpp  03_task_lab_3.cpp
08_lesson_1011/: 00_hw.cpp  01_while_loop.cpp
09_lesson_1711/: 00_hw.cpp  01_classic_alg.cpp
10_указатели_2411/: 00_hw.cpp  01_указатели.cpp
11_структуры_0112/: 00_hw.cpp  01_структуры.cpp  02_строки.cpp  03_структура_в_структуре.cpp
12_строки_структуры_0812/: 00_hw.cpp  01_lab.cpp
13_строки_массивы/: 00_char.cpp
14_char_2212/: 00_hw_char_count.cpp  01_lab6.cpp
15_char_arrays/: 00_hw_char.cpp  01_double_sized.cpp
15_функции_0501/: 00_функции.cpp  01_обработка_ошибок.cpp  02_двоичная_система.cpp
16_функции_массивы_1201/: 00_arrays_func.cpp
17_функции_двумерки_0902/: 00_tasks_matrix0902.cpp
18_ttt_game_1602/: 00_hw.cpp  01_switch.cpp  02_ttt.cpp
19_файлы_2302/: 00_файлы_basics.cpp  01_работа_с_числами.cpp  02_объединение_файлов.cpp
20_login_0203/: 00_system.cpp
21_vector_0903/: 00_vector_basics.cpp  01_vectors_methods.cpp
22_vector_1603/: 00_petya.cpp
(+6 files in other folders)
