cmake_minimum_required(VERSION 3.23)
project(thursday_5pm_2223)

set(CMAKE_CXX_STANDARD 14)

add_executable(thursday_5pm_2223 main.cpp 01_вычисления_2909/00_задачи.cpp 02_перечисления/00_перечисления.cpp 03_функции_0610/00_параметры_и_аргументы.cpp 03_функции_0610/многофайловые_программы/functions.cpp 03_функции_0610/многофайловые_программы/functions.h 03_функции_0610/многофайловые_программы/главный_исполняемый.cpp 03_функции_0610/01_условия_основы.cpp 03_функции_0610/02_вложенные_условия.cpp 04_условия_1310/00_разбор_дз.cpp 04_условия_1310/01_декартова_плоскость.cpp 04_условия_1310/02_задачи.cpp)